tests/fixtures/invalid/divmod_float_list.py
# Cannot call divmod() with Float, List[int]
x = divmod(1.0, [1, 2, 3])
